update wordpress deploy.yml to deploy the plugin on master branch merge

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,13 @@
 name: Deploy to WordPress.org
 on:
   push:
+    branches:
+      - master
     tags-ignore:
       - "*beta"
+  pull_request:
+    branches:
+      - master
 jobs:
   tag:
     name: New Release
