--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,6 +10,7 @@ on:
       - master
 jobs:
   tag:
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
     name: New Release
     runs-on: ubuntu-latest
     steps:
