--- a/.github/workflows/deploy-wordpress-plugin-preview-lightsail.yml
+++ b/.github/workflows/deploy-wordpress-plugin-preview-lightsail.yml
@@ -179,7 +179,7 @@ jobs:
             INSTANCE_ID=${{ github.event.number }}
             WP_CONTAINER=$(sudo docker ps -q --filter "name=wordpress_${INSTANCE_ID}")
             echo "Container ID: ${WP_CONTAINER}"
-            sudo docker exec -u root -it ${WP_CONTAINER} /bin/sh "apt update && apt install git"
+            sudo docker exec -u root -i ${WP_CONTAINER} sh -c "apt-get update && apt-get install -y git"
           EOF
 
       - name: Clone or Update WordPress Plugin Repository in Docker Container
