--- a/.github/workflows/deploy-wordpress-plugin-preview-lightsail.yml
+++ b/.github/workflows/deploy-wordpress-plugin-preview-lightsail.yml
@@ -74,18 +74,20 @@ jobs:
 
           # Create the Nginx config file locally
           cat <<EOF > ${LOCAL_CONFIG_FILE_PATH}
+
           server {
               listen 443;
               server_name pr-${INSTANCE_ID}.rapidload.live;
 
               location / {
                   proxy_pass http://localhost:${WORDPRESS_PORT};
-                  proxy_set_header Host $host;
-                  proxy_set_header X-Real-IP $remote_addr;
-                  proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-                  proxy_set_header X-Forwarded-Proto $scheme;
+                  proxy_set_header Host \$host;
+                  proxy_set_header X-Real-IP \$remote_addr;
+                  proxy_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
+                  proxy_set_header X-Forwarded-Proto \$scheme;
               }
           }
+
           server {
               listen 80;
               server_name pr-${INSTANCE_ID}.rapidload.live;
