--- a/includes/admin/frontend/package.json
+++ b/includes/admin/frontend/package.json
@@ -9,30 +9,30 @@
   "dependencies": {
     "@johmun/vue-tags-input": "^2.1.0",
     "@sipec/vue3-tags-input": "^3.0.4",
-    "axios": "^1.6.0",
-    "chart.js": "^4.2.1",
-    "notiwind": "^1.2.6",
-    "pinia": "^2.0.23",
-    "tw-elements": "^1.0.0-alpha12",
+    "axios": "^1.7.2",
+    "chart.js": "^4.4.3",
+    "notiwind": "^2.0.2",
+    "pinia": "^2.2.0",
+    "tw-elements": "^2.0.0",
     "v-click-outside": "^3.2.0",
-    "vue": "^3.2.41",
-    "vue-chartjs": "^5.2.0",
+    "vue": "^3.4.35",
+    "vue-chartjs": "^5.3.1",
     "vue-click-outside": "^1.1.0",
     "vue-input-tag": "^2.0.7",
-    "vue-router": "^4.1.5",
+    "vue-router": "^4.4.1",
     "vue3-circle-progress": "^1.0.7",
     "vue3-click-away": "^1.2.4",
     "vue3-clickout": "^1.1.1",
-    "vue3-tags-input": "^1.0.2",
+    "vue3-tags-input": "^1.0.12",
     "vue3-vt-notifications": "^1.0.1"
   },
   "devDependencies": {
-    "@heroicons/vue": "^2.0.13",
-    "@vitejs/plugin-vue": "^3.1.2",
-    "autoprefixer": "^10.4.12",
-    "postcss": "^8.4.18",
-    "tailwindcss": "^3.2.6",
-    "vite": "^3.1.8",
-    "vite-plugin-dynamic-base": "^0.4.5"
+    "@heroicons/vue": "^2.1.5",
+    "@vitejs/plugin-vue": "^5.1.1",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.40",
+    "tailwindcss": "^3.4.7",
+    "vite": "^5.3.5",
+    "vite-plugin-dynamic-base": "^1.1.0"
   }
 }
