--- a/includes/admin/page-optimizer/.env
+++ b/includes/admin/page-optimizer/.env
@@ -1,2 +1,2 @@
-VITE_OPTIMIZER_URL=https://rapidload.io/
+VITE_OPTIMIZER_URL=https://staging.rapidload.io/
 VITE_SERVER_ROOT=http://rapidload.local/
