--- a/.github/workflows/deploy-wordpress-plugin-preview-lightsail.yml
+++ b/.github/workflows/deploy-wordpress-plugin-preview-lightsail.yml
@@ -275,7 +275,7 @@ jobs:
               sleep 30
               sudo docker exec -i ${WP_CONTAINER} sh -c "wp option update siteurl 'https://pr-${{ github.event.number }}.rapidload.live' --allow-root"
               sudo docker exec -i ${WP_CONTAINER} sh -c "wp option update home 'https://pr-${{ github.event.number }}.rapidload.live' --allow-root"
-              sudo docker exec -i ${WP_CONTAINER} sh -c "wp rapidload connect_license ${{ secrets.RAPIDLOAD_LICENSE_KEY }} --uucss=1 --cpcss=1"
+              sudo docker exec -i ${WP_CONTAINER} sh -c "wp rapidload connect ${{ secrets.RAPIDLOAD_LICENSE_KEY }} --uucss=1 --cpcss=1 --url=https://pr-${{ github.event.number }}.rapidload.live"
 
             else
               echo "No container found with name wordpress_${INSTANCE_ID}"
