--- a/.github/workflows/titan-deploy.yml
+++ b/.github/workflows/titan-deploy.yml
@@ -20,13 +20,21 @@ jobs:
         with:
           node-version: '16'  # Specify the Node.js version required
 
-      - name: Got Project Dir
-        run: cd includes/admin/page-optimizer
+      - name: Update Version
+        working-directory: includes/admin/page-optimizer
+        run: npm version patch
 
-      - name: Install Dependencies
-        run: ls
+      - name: Publish to NPM
+        working-directory: includes/admin/page-optimizer
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
+        run: npm publish
 
-      #- name: Publish to NPM
-        #env:
-          #NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
-        #run: npm publish
+      - name: 'Slack this'
+        uses: 8398a7/action-slack@v3
+        with:
+          status: ${{ job.status }}
+          fields: repo,message,commit,author,action,eventName,ref,workflow,job,took # selectable (default: repo,message)
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }} # required
+        if: always() # Pick up events even if the job fails or is canceled.
