--- a/.github/workflows/titan-deploy.yml
+++ b/.github/workflows/titan-deploy.yml
@@ -36,11 +36,11 @@ jobs:
           NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
         run: npm publish
 
-      - name: 'Slack this'
-        uses: 8398a7/action-slack@v3
-        with:
-          status: ${{ job.status }}
-          fields: repo,message,commit,author,action,eventName,ref,workflow,job,took # selectable (default: repo,message)
-        env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }} # required
-        if: always() # Pick up events even if the job fails or is canceled.
+      #- name: 'Slack this'
+        #uses: 8398a7/action-slack@v3
+        #with:
+          #status: ${{ job.status }}
+          #fields: repo,message,commit,author,action,eventName,ref,workflow,job,took # selectable (default: repo,message)
+        #env:
+          #SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }} # required
+        #if: always() # Pick up events even if the job fails or is canceled.
