--- a/.github/workflows/titan-deploy.yml
+++ b/.github/workflows/titan-deploy.yml
@@ -1,46 +1,21 @@
-name: Publish to NPM
-
+name: Publish Package to npmjs
 on:
-  push:
-    branches:
-      - feat/titan-npm-publish
-
+  release:
+    types: [published]
 jobs:
-  publish:
+  build:
     runs-on: ubuntu-latest
-
+    permissions:
+      contents: read
+      id-token: write
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
+      - uses: actions/checkout@v4
+      # Setup .npmrc file to publish to npm
+      - uses: actions/setup-node@v4
         with:
-          node-version: '16'
-
-      - name: Install Dependencies
-        working-directory: includes/admin/page-optimizer
-        run: npm install
-
-      - name: Update Version
-        working-directory: includes/admin/page-optimizer
-        run: npm version patch
-
-      - name: Build Project
-        working-directory: includes/admin/page-optimizer
-        run: npm run build
-
-      - name: Publish to NPM
-        working-directory: includes/admin/page-optimizer
+          node-version: '20.x'
+          registry-url: 'https://registry.npmjs.org'
+      - run: npm ci
+      - run: npm publish --provenance --access public
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
-        run: npm publish
-
-      #- name: 'Slack this'
-        #uses: 8398a7/action-slack@v3
-        #with:
-          #status: ${{ job.status }}
-          #fields: repo,message,commit,author,action,eventName,ref,workflow,job,took # selectable (default: repo,message)
-        #env:
-          #SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }} # required
-        #if: always() # Pick up events even if the job fails or is canceled.
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
