--- a/includes/admin/page-optimizer/package.json
+++ b/includes/admin/page-optimizer/package.json
@@ -31,7 +31,7 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "node ./build.js",
     "test": "jest",
     "preview": "vite preview",
     "prepare": "tw-patch",
