fix: titan crashes with Google Translate feat: add bugsnag error reporting fix: Customize button select

--- a/includes/admin/page-optimizer/package.json
+++ b/includes/admin/page-optimizer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rapidload/page-optimizer",
-  "version": "1.2.4",
+  "version": "1.2.5",
   "description": "Helps you get better page speed scores by analyzing and providing optimal actions (for Wordpress)",
   "homepage": "https://rapidload.io/",
   "repository": {
@@ -41,6 +41,9 @@
     "publish:beta": "npm publish --tag beta"
   },
   "dependencies": {
+    "@bugsnag/browser-performance": "^2.7.1",
+    "@bugsnag/js": "^7.25.0",
+    "@bugsnag/plugin-react": "^7.25.0",
     "@fontsource-variable/inter": "^5.0.19",
     "@headlessui/react": "^2.1.2",
     "@heroicons/react": "^2.1.5",
