fix: only add `nopriv` when in dev mode fix: try to fix the dist merge problem

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
-includes/admin/page-optimizer/dist/* merge=ours
-includes/admin/page-optimizer/dist-debug/* merge=ours
+./includes/admin/page-optimizer/dist/* merge=ours
+./includes/admin/page-optimizer/dist-debug/* merge=ours
